--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,11 +15,22 @@
                     },
                     animation: {
                         'fade-in': 'fadeIn 0.5s ease-out',
+                        'rainbow': 'rainbow 3s linear infinite',
                     },
                     keyframes: {
                         fadeIn: {
                             '0%': { opacity: '0', transform: 'translateY(10px)' },
                             '100%': { opacity: '1', transform: 'translateY(0)' },
+                        },
+                        rainbow: {
+                            '0%': { color: '#ef4444' },
+                            '14%': { color: '#f97316' },
+                            '28%': { color: '#eab308' },
+                            '42%': { color: '#22c55e' },
+                            '57%': { color: '#06b6d4' },
+                            '71%': { color: '#3b82f6' },
+                            '85%': { color: '#a855f7' },
+                            '100%': { color: '#ef4444' }
                         }
                     }
                 }
